2001-11-08  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/naming/NamingDirContext.java:
	Remove obsolete code containing references to obsolete
	RMINameServer.

	* org/cougaar/core/naming/NSLS.java:
	Use new NamingServiceFactory instead of RMINameServer.

	* org/cougaar/core/society/Communications.java:
	Remove obsolete reference to RMINameServer.

	* org/cougaar/core/naming/NamingServiceProvider.java:
	Use the new NamingServiceFactory instead of RMINameServer.

	* org/cougaar/core/naming/NamingServiceFactory.java:
	This is a new implementation of the old RMINameServer. This is a
	much cleaner, more straightforward and efficient implementation.

2001-11-07  Michael Thome  <mthome@bbn.com>

	* PlugInAdapter
	Port to use SchedulerServiceProvider.

	* ComponentPlugin
	Effective use of new per-node scheduler, avoiding occasional
	multi-thread execution of the same scheduled instance.

	* SchedulerServiceProvider
	Rewrite and merge with PluginScheduler.  By default, now uses a
	per-node scheduler of a pool of threads rather than single
	per-agent thread for performance improvement and additional
	parallelism. 

	* ClusterImpl
	Use only new SchedulerServiceProvider instead of PluginScheduler.

	* org.cougaar.core.society.Bootstrapper
	Changed rules for the bootstrap classloader to avoid the whole
	package-prefix exclusion-list mess.  Essentially, the classloader
	will attempt to load classes from "discovered" jars and then defer
	to the system classloader to try to find everything else.

2001-11-02  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/util/DBProperties.java (Repository): Remove dbspec
	arg when reading a query file. The default dbspec is obtained from
	the query file itself. Add methods for interpreting queries
	relative to an arbitrary database.

2001-10-31  Ray Tomlinson  <RTomlinson@bbn.com>

	* org/cougaar/core/component/ComponentFactory.java (Repository):
	Merge from V8_6_0
	Remove the test for the parameter of a component being a